convert php to html

--- a/delete.html
+++ b/delete.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Login</title>
+    <title>Home</title>
 </head>
 
 <body>
     <div class="container">
         <div class="box form-box">
-
-            <header>Login</header>
-            <form action="login.php" method="post">
+            <header>Delete Account</header>
+            <form action="delete.php" method="post">
                 <div class="field input">
                     <label for="email">Email</label>
                     <input type="text" name="email" id="email" autocomplete="off" required>
@@ -27,14 +26,10 @@
 
                 <div class="field">
 
-                    <input type="submit" class="btn" name="submit" value="Login" required>
-                </div>
-                <div class="links">
-                    Don't have account? <a href="register.html">Sign Up Now</a>
+                    <input type="submit" class="btn" name="submit" value="Delete" required>
                 </div>
             </form>
         </div>
-    </div>
 </body>
 
 </html>
