--- a/register.html
+++ b/register.html
@@ -3,34 +3,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 
 <body>
     <div class="container">
         <div class="box form-box">
+            <header>Sign Up</header>
+            <form action="register.php" method="post">
+                <div class="field input">
+                    <label for="username">Username</label>
+                    <input type="text" name="username" id="username" autocomplete="off" required>
+                </div>
 
-            <header>Login</header>
-            <form action="login.php" method="post">
                 <div class="field input">
                     <label for="email">Email</label>
                     <input type="text" name="email" id="email" autocomplete="off" required>
                 </div>
 
                 <div class="field input">
+                    <label for="phone_num">phone number</label>
+                    <input type="text" name="phone_num" id="phone_num" autocomplete="off" required>
+                </div>
+                <div class="field input">
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password" autocomplete="off" required>
                 </div>
 
+
                 <div class="field">
 
-                    <input type="submit" class="btn" name="submit" value="Login" required>
+                    <input type="submit" class="btn" name="submit" value="Register" required>
                 </div>
                 <div class="links">
-                    Don't have account? <a href="register.html">Sign Up Now</a>
+                    Already a member? <a href="login.html">Sign In</a>
                 </div>
             </form>
         </div>
