--- a/edit.html
+++ b/edit.html
@@ -12,7 +12,7 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <p><a href="index.php" class="logo">Car<span>Point</span></a></p>
+            <p><a href="index.html" class="logo">Car<span>Point</span></a></p>
         </div>
     </div>
     <div class="container">
@@ -26,17 +26,17 @@
 
                 <div class="field input">
                     <label for="email">Email</label>
-                    <input type="text" name="email" id="email" value="" autocomplete="off" required>
+                    <input type="email" name="email" id="email" value="" autocomplete="off" required>
                 </div>
 
                 <div class="field input">
                     <label for="phone">Phone Number</label>
-                    <input type="text" name="phone" id="phone" value="" autocomplete="off" required>
+                    <input type="text" name="phone_num" id="phone" value="" autocomplete="off" required>
                 </div>
 
                 <div class="field">
 
-                    <input type="submit" class="btn" name="submit" value="Update" required>
+                    <input type="submit" class="btn" name="edit" value="Update" required>
                 </div>
 
 
