--- a/delete.html
+++ b/delete.html
@@ -16,7 +16,7 @@
             <form action="delete.php" method="post">
                 <div class="field input">
                     <label for="email">Email</label>
-                    <input type="text" name="email" id="email" autocomplete="off" required>
+                    <input type="email" name="email" id="email" autocomplete="off" required>
                 </div>
 
                 <div class="field input">
