--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <form action="login.php" method="post">
                 <div class="field input">
                     <label for="email">Email</label>
-                    <input type="text" name="email" id="email" autocomplete="off" required>
+                    <input type="email" name="email" id="email" autocomplete="off" required>
                 </div>
 
                 <div class="field input">
