--- a/edit.html
+++ b/edit.html
@@ -30,8 +30,8 @@
                 </div>
 
                 <div class="field input">
-                    <label for="phone">Phone Number</label>
-                    <input type="text" name="phone_num" id="phone" value="" autocomplete="off" required>
+                    <label for="pass">Password</label>
+                    <input type="password" name="pass" id="pass" value="" autocomplete="off" required>
                 </div>
 
                 <div class="field">
