--- a/index.html
+++ b/index.html
@@ -27,50 +27,41 @@
         <li><a href="#parts">Parts</a></li>
         <li><a href="#blog">Our Blog</a></li>
       </ul>
-      <!--Search Icon-->
-      <i class="bx bx-search" id="search-icon"></i>
-      <!--Search Box-->
-      <div class="search-box container">
-        <input type="search" name="" id="" placeholder="Search here..." />
-      </div>
       <a href="edit.html" class="btn" style="height: 35px;
       background: #d90429;
-      border: 0;
       border-radius: 5px;
+  margin-left: 1px;
+
       color: #fff;
       font-size: 15px;
       cursor: pointer;
       transition: all .3s;
-      margin-top: 0px;
       padding: 5px 10px;
       ">edit profile</a>
 
       <a href="delete.html" class="btn" style="height: 35px;
       background: #d90429;
-      border: 0;
+  margin-left: 1px;
+
       border-radius: 5px;
       color: #fff;
       font-size: 15px;
       cursor: pointer;
       transition: all .3s;
-      margin-top: 0px;
       padding: 5px 10px;
       ">delete profile</a>
 
       <a href="login.html" class="btn" style="height: 35px;
       background: #d90429;
-      border: 0;
+  margin-left: 1px;
+
       border-radius: 5px;
       color: #fff;
       font-size: 15px;
       cursor: pointer;
       transition: all .3s;
-      margin: 0px;
       padding: 5px 10px;
       ">Log out</a>
-
-
-
     </div>
   </header>
 
@@ -100,7 +91,6 @@
         <img src="img/part1.png" alt="" />
         <h3>Auto Spare Parts</h3>
         <span>$120.99</span>
-        <i class="bx bxs-star">(6 Reviews)</i>
         <a href="#" class="btn">Buy Now</a>
         <a href="#" class="details">View Details</a>
       </div>
@@ -109,7 +99,6 @@
         <img src="img/part2.png" alt="" />
         <h3>Auto Spare Parts</h3>
         <span>$120.99</span>
-        <i class="bx bxs-star">(6 Reviews)</i>
         <a href="#" class="btn">Buy Now</a>
         <a href="#" class="details">View Details</a>
       </div>
@@ -118,7 +107,6 @@
         <img src="img/part3.png" alt="" />
         <h3>Auto Spare Parts</h3>
         <span>$120.99</span>
-        <i class="bx bxs-star">(6 Reviews)</i>
         <a href="#" class="btn">Buy Now</a>
         <a href="#" class="details">View Details</a>
       </div>
@@ -127,7 +115,6 @@
         <img src="img/part4.png" alt="" />
         <h3>Auto Spare Parts</h3>
         <span>$120.99</span>
-        <i class="bx bxs-star">(6 Reviews)</i>
         <a href="#" class="btn">Buy Now</a>
         <a href="#" class="details">View Details</a>
       </div>
@@ -136,7 +123,6 @@
         <img src="img/part5.png" alt="" />
         <h3>Auto Spare Parts</h3>
         <span>$120.99</span>
-        <i class="bx bxs-star">(6 Reviews)</i>
         <a href="#" class="btn">Buy Now</a>
         <a href="#" class="details">View Details</a>
       </div>
@@ -145,7 +131,7 @@
         <img src="img/part6.png" alt="" />
         <h3>Auto Spare Parts</h3>
         <span>$120.99</span>
-        <i class="bx bxs-star">(6 Reviews)</i>
+
         <a href="#" class="btn">Buy Now</a>
         <a href="#" class="details">View Details</a>
       </div>
